# teleport-mcmc

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: results.md
docs/: algorithm_design.md  algorithm_design_DELETE THIS LATER.md  api.md  buglog.md  math.md
docs/archive/: algorithm_design_v1_draft.md
notebooks/: 03_iat_vs_doublewell.ipynb  04_teleporting_vs_gw.ipynb
teleport/: targets.py
teleport/kernels/: goodman_weare.py  rwmh.py  teleporting.py
teleport/utils/: weights.py
tests/: test_goodman_weare.py  test_rwmh.py  test_teleporting.py  test_weights.py
