[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teleport-mcmc"
version = "0.1.0"
description = "GPU-accelerated ensemble MCMC with teleporting walkers in JAX"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]
benchmarks = [
    "matplotlib",
    "numpy",
    "emcee",
]

[project.urls]
Homepage = "https://github.com/thunderbolt190/teleport-mcmc"
Paper = "https://arxiv.org/abs/2106.02686"

[tool.hatch.build.targets.wheel]
packages = ["teleport"]
